Entrega 3/parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> PROGRAM createProcDir ID addProcDir SEMICOLON a b MAIN LPARENTHESIS RPARENTHESIS bloque END
Rule 2     createProcDir -> <empty>
Rule 3     addProcDir -> <empty>
Rule 4     a -> variable
Rule 5     a -> variable a
Rule 6     a -> <empty>
Rule 7     b -> funcion b
Rule 8     b -> <empty>
Rule 9     bloque -> LCURLY c RCURLY
Rule 10    c -> estatuto c
Rule 11    c -> <empty>
Rule 12    tipo -> INTTYPE
Rule 13    tipo -> FLOATTYPE
Rule 14    tipo -> CHARTYPE
Rule 15    tipo -> BOOLTYPE
Rule 16    tipo -> STRINGTYPE
Rule 17    tipo -> VOIDTYPE
Rule 18    estatuto -> asignacion
Rule 19    estatuto -> condicion
Rule 20    estatuto -> escritura
Rule 21    estatuto -> regreso
Rule 22    estatuto -> ciclo
Rule 23    regreso -> RETURN exp SEMICOLON
Rule 24    variable -> VAR createVarDir d
Rule 25    createVarDir -> <empty>
Rule 26    d -> e COLON tipo addType SEMICOLON f
Rule 27    addType -> <empty>
Rule 28    e -> ID addVarDir
Rule 29    e -> ID addVarDir LBRACKET RBRACKET COMA e
Rule 30    e -> ID addVarDir LBRACKET RBRACKET
Rule 31    e -> ID addVarDir COMA e
Rule 32    addVarDir -> <empty>
Rule 33    f -> d
Rule 34    f -> <empty>
Rule 35    asignacion -> ID g
Rule 36    g -> ASSIGN expresion SEMICOLON
Rule 37    g -> LBRACKET RBRACKET ASSIGN LBRACKET h RBRACKET SEMICOLON
Rule 38    h -> expresion
Rule 39    h -> expresion COMA h
Rule 40    exp -> termino i
Rule 41    i -> j
Rule 42    i -> <empty>
Rule 43    j -> ADDITION exp
Rule 44    j -> SUBTRACTION exp
Rule 45    termino -> factor k
Rule 46    k -> l
Rule 47    k -> <empty>
Rule 48    l -> MULTIPLICATION termino
Rule 49    l -> DIVISION termino
Rule 50    factor -> m
Rule 51    factor -> n
Rule 52    m -> varcte
Rule 53    n -> LPARENTHESIS expresion RPARENTHESIS
Rule 54    expresion -> nuevaexp v
Rule 55    v -> w
Rule 56    v -> w expresion
Rule 57    v -> <empty>
Rule 58    w -> AND nuevaexp
Rule 59    w -> OR nuevaexp
Rule 60    nuevaexp -> exp o
Rule 61    o -> LESS exp
Rule 62    o -> GREATER exp
Rule 63    o -> LESSEQUAL exp
Rule 64    o -> GREATEREQUAL exp
Rule 65    o -> NOTEQUAL exp
Rule 66    o -> EQUAL exp
Rule 67    o -> <empty>
Rule 68    varcte -> p
Rule 69    p -> ID q
Rule 70    p -> INT
Rule 71    p -> FLOAT
Rule 72    p -> CHAR
Rule 73    p -> STRING
Rule 74    p -> BOOL
Rule 75    q -> LBRACKET RBRACKET
Rule 76    q -> <empty>
Rule 77    condicion -> IF LPARENTHESIS expresion RPARENTHESIS bloque r
Rule 78    r -> ELSE bloque
Rule 79    r -> <empty>
Rule 80    escritura -> PRINT LPARENTHESIS s RPARENTHESIS SEMICOLON
Rule 81    s -> expresion
Rule 82    s -> QUOTE CTESTRING QUOTE
Rule 83    ciclo -> WHILE LPARENTHESIS expresion RPARENTHESIS bloque
Rule 84    funcion -> tipo FUNC ID addProcDirFunc LPARENTHESIS t RPARENTHESIS bloque
Rule 85    addProcDirFunc -> <empty>
Rule 86    t -> argumentos
Rule 87    t -> <empty>
Rule 88    argumentos -> u
Rule 89    u -> ID addVarDirFunc COLON tipo addTypeFunc
Rule 90    u -> ID addVarDirFunc COLON tipo addTypeFunc COMA u
Rule 91    addVarDirFunc -> <empty>
Rule 92    addTypeFunc -> <empty>

Terminals, with rules where they appear

ADDITION             : 43
AND                  : 58
ASSIGN               : 36 37
BOOL                 : 74
BOOLTYPE             : 15
CHAR                 : 72
CHARTYPE             : 14
COLON                : 26 89 90
COMA                 : 29 31 39 90
CTESTRING            : 82
DIVISION             : 49
ELSE                 : 78
END                  : 1
EQUAL                : 66
FLOAT                : 71
FLOATTYPE            : 13
FUNC                 : 84
GREATER              : 62
GREATEREQUAL         : 64
ID                   : 1 28 29 30 31 35 69 84 89 90
IF                   : 77
INT                  : 70
INTTYPE              : 12
LBRACKET             : 29 30 37 37 75
LCURLY               : 9
LESS                 : 61
LESSEQUAL            : 63
LPARENTHESIS         : 1 53 77 80 83 84
MAIN                 : 1
MULTIPLICATION       : 48
NOTEQUAL             : 65
OR                   : 59
PRINT                : 80
PROGRAM              : 1
QUOTE                : 82 82
RBRACKET             : 29 30 37 37 75
RCURLY               : 9
RETURN               : 23
RPARENTHESIS         : 1 53 77 80 83 84
SEMICOLON            : 1 23 26 36 37 80
STRING               : 73
STRINGTYPE           : 16
SUBTRACTION          : 44
VAR                  : 24
VOIDTYPE             : 17
WHILE                : 83
error                : 

Nonterminals, with rules where they appear

a                    : 1 5
addProcDir           : 1
addProcDirFunc       : 84
addType              : 26
addTypeFunc          : 89 90
addVarDir            : 28 29 30 31
addVarDirFunc        : 89 90
argumentos           : 86
asignacion           : 18
b                    : 1 7
bloque               : 1 77 78 83 84
c                    : 9 10
ciclo                : 22
condicion            : 19
createProcDir        : 1
createVarDir         : 24
d                    : 24 33
e                    : 26 29 31
escritura            : 20
estatuto             : 10
exp                  : 23 43 44 60 61 62 63 64 65 66
expresion            : 36 38 39 53 56 77 81 83
f                    : 26
factor               : 45
funcion              : 7
g                    : 35
h                    : 37 39
i                    : 40
j                    : 41
k                    : 45
l                    : 46
m                    : 50
n                    : 51
nuevaexp             : 54 58 59
o                    : 60
p                    : 68
programa             : 0
q                    : 69
r                    : 77
regreso              : 21
s                    : 80
t                    : 84
termino              : 40 48 49
tipo                 : 26 84 89 90
u                    : 88 90
v                    : 54
varcte               : 52
variable             : 4 5
w                    : 55 56

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . PROGRAM createProcDir ID addProcDir SEMICOLON a b MAIN LPARENTHESIS RPARENTHESIS bloque END

    PROGRAM         shift and go to state 1

    programa                       shift and go to state 2

state 1

    (1) programa -> PROGRAM . createProcDir ID addProcDir SEMICOLON a b MAIN LPARENTHESIS RPARENTHESIS bloque END
    (2) createProcDir -> .

    ID              reduce using rule 2 (createProcDir -> .)

    createProcDir                  shift and go to state 3

state 2

    (0) S' -> programa .



state 3

    (1) programa -> PROGRAM createProcDir . ID addProcDir SEMICOLON a b MAIN LPARENTHESIS RPARENTHESIS bloque END

    ID              shift and go to state 4


state 4

    (1) programa -> PROGRAM createProcDir ID . addProcDir SEMICOLON a b MAIN LPARENTHESIS RPARENTHESIS bloque END
    (3) addProcDir -> .

    SEMICOLON       reduce using rule 3 (addProcDir -> .)

    addProcDir                     shift and go to state 5

state 5

    (1) programa -> PROGRAM createProcDir ID addProcDir . SEMICOLON a b MAIN LPARENTHESIS RPARENTHESIS bloque END

    SEMICOLON       shift and go to state 6


state 6

    (1) programa -> PROGRAM createProcDir ID addProcDir SEMICOLON . a b MAIN LPARENTHESIS RPARENTHESIS bloque END
    (4) a -> . variable
    (5) a -> . variable a
    (6) a -> .
    (24) variable -> . VAR createVarDir d

    INTTYPE         reduce using rule 6 (a -> .)
    FLOATTYPE       reduce using rule 6 (a -> .)
    CHARTYPE        reduce using rule 6 (a -> .)
    BOOLTYPE        reduce using rule 6 (a -> .)
    STRINGTYPE      reduce using rule 6 (a -> .)
    VOIDTYPE        reduce using rule 6 (a -> .)
    MAIN            reduce using rule 6 (a -> .)
    VAR             shift and go to state 8

    a                              shift and go to state 7
    variable                       shift and go to state 9

state 7

    (1) programa -> PROGRAM createProcDir ID addProcDir SEMICOLON a . b MAIN LPARENTHESIS RPARENTHESIS bloque END
    (7) b -> . funcion b
    (8) b -> .
    (84) funcion -> . tipo FUNC ID addProcDirFunc LPARENTHESIS t RPARENTHESIS bloque
    (12) tipo -> . INTTYPE
    (13) tipo -> . FLOATTYPE
    (14) tipo -> . CHARTYPE
    (15) tipo -> . BOOLTYPE
    (16) tipo -> . STRINGTYPE
    (17) tipo -> . VOIDTYPE

    MAIN            reduce using rule 8 (b -> .)
    INTTYPE         shift and go to state 17
    FLOATTYPE       shift and go to state 15
    CHARTYPE        shift and go to state 10
    BOOLTYPE        shift and go to state 14
    STRINGTYPE      shift and go to state 11
    VOIDTYPE        shift and go to state 18

    b                              shift and go to state 16
    tipo                           shift and go to state 12
    funcion                        shift and go to state 13

state 8

    (24) variable -> VAR . createVarDir d
    (25) createVarDir -> .

    ID              reduce using rule 25 (createVarDir -> .)

    createVarDir                   shift and go to state 19

state 9

    (4) a -> variable .
    (5) a -> variable . a
    (4) a -> . variable
    (5) a -> . variable a
    (6) a -> .
    (24) variable -> . VAR createVarDir d

  ! reduce/reduce conflict for INTTYPE resolved using rule 4 (a -> variable .)
  ! reduce/reduce conflict for FLOATTYPE resolved using rule 4 (a -> variable .)
  ! reduce/reduce conflict for CHARTYPE resolved using rule 4 (a -> variable .)
  ! reduce/reduce conflict for BOOLTYPE resolved using rule 4 (a -> variable .)
  ! reduce/reduce conflict for STRINGTYPE resolved using rule 4 (a -> variable .)
  ! reduce/reduce conflict for VOIDTYPE resolved using rule 4 (a -> variable .)
  ! reduce/reduce conflict for MAIN resolved using rule 4 (a -> variable .)
    INTTYPE         reduce using rule 4 (a -> variable .)
    FLOATTYPE       reduce using rule 4 (a -> variable .)
    CHARTYPE        reduce using rule 4 (a -> variable .)
    BOOLTYPE        reduce using rule 4 (a -> variable .)
    STRINGTYPE      reduce using rule 4 (a -> variable .)
    VOIDTYPE        reduce using rule 4 (a -> variable .)
    MAIN            reduce using rule 4 (a -> variable .)
    VAR             shift and go to state 8

  ! INTTYPE         [ reduce using rule 6 (a -> .) ]
  ! FLOATTYPE       [ reduce using rule 6 (a -> .) ]
  ! CHARTYPE        [ reduce using rule 6 (a -> .) ]
  ! BOOLTYPE        [ reduce using rule 6 (a -> .) ]
  ! STRINGTYPE      [ reduce using rule 6 (a -> .) ]
  ! VOIDTYPE        [ reduce using rule 6 (a -> .) ]
  ! MAIN            [ reduce using rule 6 (a -> .) ]

    variable                       shift and go to state 9
    a                              shift and go to state 20

state 10

    (14) tipo -> CHARTYPE .

    COMA            reduce using rule 14 (tipo -> CHARTYPE .)
    RPARENTHESIS    reduce using rule 14 (tipo -> CHARTYPE .)
    SEMICOLON       reduce using rule 14 (tipo -> CHARTYPE .)
    FUNC            reduce using rule 14 (tipo -> CHARTYPE .)


state 11

    (16) tipo -> STRINGTYPE .

    COMA            reduce using rule 16 (tipo -> STRINGTYPE .)
    RPARENTHESIS    reduce using rule 16 (tipo -> STRINGTYPE .)
    SEMICOLON       reduce using rule 16 (tipo -> STRINGTYPE .)
    FUNC            reduce using rule 16 (tipo -> STRINGTYPE .)


state 12

    (84) funcion -> tipo . FUNC ID addProcDirFunc LPARENTHESIS t RPARENTHESIS bloque

    FUNC            shift and go to state 21


state 13

    (7) b -> funcion . b
    (7) b -> . funcion b
    (8) b -> .
    (84) funcion -> . tipo FUNC ID addProcDirFunc LPARENTHESIS t RPARENTHESIS bloque
    (12) tipo -> . INTTYPE
    (13) tipo -> . FLOATTYPE
    (14) tipo -> . CHARTYPE
    (15) tipo -> . BOOLTYPE
    (16) tipo -> . STRINGTYPE
    (17) tipo -> . VOIDTYPE

    MAIN            reduce using rule 8 (b -> .)
    INTTYPE         shift and go to state 17
    FLOATTYPE       shift and go to state 15
    CHARTYPE        shift and go to state 10
    BOOLTYPE        shift and go to state 14
    STRINGTYPE      shift and go to state 11
    VOIDTYPE        shift and go to state 18

    b                              shift and go to state 22
    tipo                           shift and go to state 12
    funcion                        shift and go to state 13

state 14

    (15) tipo -> BOOLTYPE .

    COMA            reduce using rule 15 (tipo -> BOOLTYPE .)
    RPARENTHESIS    reduce using rule 15 (tipo -> BOOLTYPE .)
    SEMICOLON       reduce using rule 15 (tipo -> BOOLTYPE .)
    FUNC            reduce using rule 15 (tipo -> BOOLTYPE .)


state 15

    (13) tipo -> FLOATTYPE .

    COMA            reduce using rule 13 (tipo -> FLOATTYPE .)
    RPARENTHESIS    reduce using rule 13 (tipo -> FLOATTYPE .)
    SEMICOLON       reduce using rule 13 (tipo -> FLOATTYPE .)
    FUNC            reduce using rule 13 (tipo -> FLOATTYPE .)


state 16

    (1) programa -> PROGRAM createProcDir ID addProcDir SEMICOLON a b . MAIN LPARENTHESIS RPARENTHESIS bloque END

    MAIN            shift and go to state 23


state 17

    (12) tipo -> INTTYPE .

    COMA            reduce using rule 12 (tipo -> INTTYPE .)
    RPARENTHESIS    reduce using rule 12 (tipo -> INTTYPE .)
    SEMICOLON       reduce using rule 12 (tipo -> INTTYPE .)
    FUNC            reduce using rule 12 (tipo -> INTTYPE .)


state 18

    (17) tipo -> VOIDTYPE .

    COMA            reduce using rule 17 (tipo -> VOIDTYPE .)
    RPARENTHESIS    reduce using rule 17 (tipo -> VOIDTYPE .)
    SEMICOLON       reduce using rule 17 (tipo -> VOIDTYPE .)
    FUNC            reduce using rule 17 (tipo -> VOIDTYPE .)


state 19

    (24) variable -> VAR createVarDir . d
    (26) d -> . e COLON tipo addType SEMICOLON f
    (28) e -> . ID addVarDir
    (29) e -> . ID addVarDir LBRACKET RBRACKET COMA e
    (30) e -> . ID addVarDir LBRACKET RBRACKET
    (31) e -> . ID addVarDir COMA e

    ID              shift and go to state 26

    e                              shift and go to state 24
    d                              shift and go to state 25

state 20

    (5) a -> variable a .

    INTTYPE         reduce using rule 5 (a -> variable a .)
    FLOATTYPE       reduce using rule 5 (a -> variable a .)
    CHARTYPE        reduce using rule 5 (a -> variable a .)
    BOOLTYPE        reduce using rule 5 (a -> variable a .)
    STRINGTYPE      reduce using rule 5 (a -> variable a .)
    VOIDTYPE        reduce using rule 5 (a -> variable a .)
    MAIN            reduce using rule 5 (a -> variable a .)


state 21

    (84) funcion -> tipo FUNC . ID addProcDirFunc LPARENTHESIS t RPARENTHESIS bloque

    ID              shift and go to state 27


state 22

    (7) b -> funcion b .

    MAIN            reduce using rule 7 (b -> funcion b .)


state 23

    (1) programa -> PROGRAM createProcDir ID addProcDir SEMICOLON a b MAIN . LPARENTHESIS RPARENTHESIS bloque END

    LPARENTHESIS    shift and go to state 28


state 24

    (26) d -> e . COLON tipo addType SEMICOLON f

    COLON           shift and go to state 29


state 25

    (24) variable -> VAR createVarDir d .

    VAR             reduce using rule 24 (variable -> VAR createVarDir d .)
    INTTYPE         reduce using rule 24 (variable -> VAR createVarDir d .)
    FLOATTYPE       reduce using rule 24 (variable -> VAR createVarDir d .)
    CHARTYPE        reduce using rule 24 (variable -> VAR createVarDir d .)
    BOOLTYPE        reduce using rule 24 (variable -> VAR createVarDir d .)
    STRINGTYPE      reduce using rule 24 (variable -> VAR createVarDir d .)
    VOIDTYPE        reduce using rule 24 (variable -> VAR createVarDir d .)
    MAIN            reduce using rule 24 (variable -> VAR createVarDir d .)


state 26

    (28) e -> ID . addVarDir
    (29) e -> ID . addVarDir LBRACKET RBRACKET COMA e
    (30) e -> ID . addVarDir LBRACKET RBRACKET
    (31) e -> ID . addVarDir COMA e
    (32) addVarDir -> .

    LBRACKET        reduce using rule 32 (addVarDir -> .)
    COMA            reduce using rule 32 (addVarDir -> .)
    COLON           reduce using rule 32 (addVarDir -> .)

    addVarDir                      shift and go to state 30

state 27

    (84) funcion -> tipo FUNC ID . addProcDirFunc LPARENTHESIS t RPARENTHESIS bloque
    (85) addProcDirFunc -> .

    LPARENTHESIS    reduce using rule 85 (addProcDirFunc -> .)

    addProcDirFunc                 shift and go to state 31

state 28

    (1) programa -> PROGRAM createProcDir ID addProcDir SEMICOLON a b MAIN LPARENTHESIS . RPARENTHESIS bloque END

    RPARENTHESIS    shift and go to state 32


state 29

    (26) d -> e COLON . tipo addType SEMICOLON f
    (12) tipo -> . INTTYPE
    (13) tipo -> . FLOATTYPE
    (14) tipo -> . CHARTYPE
    (15) tipo -> . BOOLTYPE
    (16) tipo -> . STRINGTYPE
    (17) tipo -> . VOIDTYPE

    INTTYPE         shift and go to state 17
    FLOATTYPE       shift and go to state 15
    CHARTYPE        shift and go to state 10
    BOOLTYPE        shift and go to state 14
    STRINGTYPE      shift and go to state 11
    VOIDTYPE        shift and go to state 18

    tipo                           shift and go to state 33

state 30

    (28) e -> ID addVarDir .
    (29) e -> ID addVarDir . LBRACKET RBRACKET COMA e
    (30) e -> ID addVarDir . LBRACKET RBRACKET
    (31) e -> ID addVarDir . COMA e

    COLON           reduce using rule 28 (e -> ID addVarDir .)
    LBRACKET        shift and go to state 34
    COMA            shift and go to state 35


state 31

    (84) funcion -> tipo FUNC ID addProcDirFunc . LPARENTHESIS t RPARENTHESIS bloque

    LPARENTHESIS    shift and go to state 36


state 32

    (1) programa -> PROGRAM createProcDir ID addProcDir SEMICOLON a b MAIN LPARENTHESIS RPARENTHESIS . bloque END
    (9) bloque -> . LCURLY c RCURLY

    LCURLY          shift and go to state 37

    bloque                         shift and go to state 38

state 33

    (26) d -> e COLON tipo . addType SEMICOLON f
    (27) addType -> .

    SEMICOLON       reduce using rule 27 (addType -> .)

    addType                        shift and go to state 39

state 34

    (29) e -> ID addVarDir LBRACKET . RBRACKET COMA e
    (30) e -> ID addVarDir LBRACKET . RBRACKET

    RBRACKET        shift and go to state 40


state 35

    (31) e -> ID addVarDir COMA . e
    (28) e -> . ID addVarDir
    (29) e -> . ID addVarDir LBRACKET RBRACKET COMA e
    (30) e -> . ID addVarDir LBRACKET RBRACKET
    (31) e -> . ID addVarDir COMA e

    ID              shift and go to state 26

    e                              shift and go to state 41

state 36

    (84) funcion -> tipo FUNC ID addProcDirFunc LPARENTHESIS . t RPARENTHESIS bloque
    (86) t -> . argumentos
    (87) t -> .
    (88) argumentos -> . u
    (89) u -> . ID addVarDirFunc COLON tipo addTypeFunc
    (90) u -> . ID addVarDirFunc COLON tipo addTypeFunc COMA u

    RPARENTHESIS    reduce using rule 87 (t -> .)
    ID              shift and go to state 45

    u                              shift and go to state 42
    t                              shift and go to state 43
    argumentos                     shift and go to state 44

state 37

    (9) bloque -> LCURLY . c RCURLY
    (10) c -> . estatuto c
    (11) c -> .
    (18) estatuto -> . asignacion
    (19) estatuto -> . condicion
    (20) estatuto -> . escritura
    (21) estatuto -> . regreso
    (22) estatuto -> . ciclo
    (35) asignacion -> . ID g
    (77) condicion -> . IF LPARENTHESIS expresion RPARENTHESIS bloque r
    (80) escritura -> . PRINT LPARENTHESIS s RPARENTHESIS SEMICOLON
    (23) regreso -> . RETURN exp SEMICOLON
    (83) ciclo -> . WHILE LPARENTHESIS expresion RPARENTHESIS bloque

    RCURLY          reduce using rule 11 (c -> .)
    ID              shift and go to state 52
    IF              shift and go to state 53
    PRINT           shift and go to state 48
    RETURN          shift and go to state 46
    WHILE           shift and go to state 47

    c                              shift and go to state 54
    regreso                        shift and go to state 55
    ciclo                          shift and go to state 49
    asignacion                     shift and go to state 56
    estatuto                       shift and go to state 50
    condicion                      shift and go to state 51
    escritura                      shift and go to state 57

state 38

    (1) programa -> PROGRAM createProcDir ID addProcDir SEMICOLON a b MAIN LPARENTHESIS RPARENTHESIS bloque . END

    END             shift and go to state 58


state 39

    (26) d -> e COLON tipo addType . SEMICOLON f

    SEMICOLON       shift and go to state 59


state 40

    (29) e -> ID addVarDir LBRACKET RBRACKET . COMA e
    (30) e -> ID addVarDir LBRACKET RBRACKET .

    COMA            shift and go to state 60
    COLON           reduce using rule 30 (e -> ID addVarDir LBRACKET RBRACKET .)


state 41

    (31) e -> ID addVarDir COMA e .

    COLON           reduce using rule 31 (e -> ID addVarDir COMA e .)


state 42

    (88) argumentos -> u .

    RPARENTHESIS    reduce using rule 88 (argumentos -> u .)


state 43

    (84) funcion -> tipo FUNC ID addProcDirFunc LPARENTHESIS t . RPARENTHESIS bloque

    RPARENTHESIS    shift and go to state 61


state 44

    (86) t -> argumentos .

    RPARENTHESIS    reduce using rule 86 (t -> argumentos .)


state 45

    (89) u -> ID . addVarDirFunc COLON tipo addTypeFunc
    (90) u -> ID . addVarDirFunc COLON tipo addTypeFunc COMA u
    (91) addVarDirFunc -> .

    COLON           reduce using rule 91 (addVarDirFunc -> .)

    addVarDirFunc                  shift and go to state 62

state 46

    (23) regreso -> RETURN . exp SEMICOLON
    (40) exp -> . termino i
    (45) termino -> . factor k
    (50) factor -> . m
    (51) factor -> . n
    (52) m -> . varcte
    (53) n -> . LPARENTHESIS expresion RPARENTHESIS
    (68) varcte -> . p
    (69) p -> . ID q
    (70) p -> . INT
    (71) p -> . FLOAT
    (72) p -> . CHAR
    (73) p -> . STRING
    (74) p -> . BOOL

    LPARENTHESIS    shift and go to state 65
    ID              shift and go to state 76
    INT             shift and go to state 75
    FLOAT           shift and go to state 66
    CHAR            shift and go to state 63
    STRING          shift and go to state 74
    BOOL            shift and go to state 70

    varcte                         shift and go to state 64
    m                              shift and go to state 67
    n                              shift and go to state 68
    p                              shift and go to state 69
    termino                        shift and go to state 71
    exp                            shift and go to state 72
    factor                         shift and go to state 73

state 47

    (83) ciclo -> WHILE . LPARENTHESIS expresion RPARENTHESIS bloque

    LPARENTHESIS    shift and go to state 77


state 48

    (80) escritura -> PRINT . LPARENTHESIS s RPARENTHESIS SEMICOLON

    LPARENTHESIS    shift and go to state 78


state 49

    (22) estatuto -> ciclo .

    ID              reduce using rule 22 (estatuto -> ciclo .)
    IF              reduce using rule 22 (estatuto -> ciclo .)
    PRINT           reduce using rule 22 (estatuto -> ciclo .)
    RETURN          reduce using rule 22 (estatuto -> ciclo .)
    WHILE           reduce using rule 22 (estatuto -> ciclo .)
    RCURLY          reduce using rule 22 (estatuto -> ciclo .)


state 50

    (10) c -> estatuto . c
    (10) c -> . estatuto c
    (11) c -> .
    (18) estatuto -> . asignacion
    (19) estatuto -> . condicion
    (20) estatuto -> . escritura
    (21) estatuto -> . regreso
    (22) estatuto -> . ciclo
    (35) asignacion -> . ID g
    (77) condicion -> . IF LPARENTHESIS expresion RPARENTHESIS bloque r
    (80) escritura -> . PRINT LPARENTHESIS s RPARENTHESIS SEMICOLON
    (23) regreso -> . RETURN exp SEMICOLON
    (83) ciclo -> . WHILE LPARENTHESIS expresion RPARENTHESIS bloque

    RCURLY          reduce using rule 11 (c -> .)
    ID              shift and go to state 52
    IF              shift and go to state 53
    PRINT           shift and go to state 48
    RETURN          shift and go to state 46
    WHILE           shift and go to state 47

    c                              shift and go to state 79
    regreso                        shift and go to state 55
    ciclo                          shift and go to state 49
    asignacion                     shift and go to state 56
    estatuto                       shift and go to state 50
    condicion                      shift and go to state 51
    escritura                      shift and go to state 57

state 51

    (19) estatuto -> condicion .

    ID              reduce using rule 19 (estatuto -> condicion .)
    IF              reduce using rule 19 (estatuto -> condicion .)
    PRINT           reduce using rule 19 (estatuto -> condicion .)
    RETURN          reduce using rule 19 (estatuto -> condicion .)
    WHILE           reduce using rule 19 (estatuto -> condicion .)
    RCURLY          reduce using rule 19 (estatuto -> condicion .)


state 52

    (35) asignacion -> ID . g
    (36) g -> . ASSIGN expresion SEMICOLON
    (37) g -> . LBRACKET RBRACKET ASSIGN LBRACKET h RBRACKET SEMICOLON

    ASSIGN          shift and go to state 81
    LBRACKET        shift and go to state 82

    g                              shift and go to state 80

state 53

    (77) condicion -> IF . LPARENTHESIS expresion RPARENTHESIS bloque r

    LPARENTHESIS    shift and go to state 83


state 54

    (9) bloque -> LCURLY c . RCURLY

    RCURLY          shift and go to state 84


state 55

    (21) estatuto -> regreso .

    ID              reduce using rule 21 (estatuto -> regreso .)
    IF              reduce using rule 21 (estatuto -> regreso .)
    PRINT           reduce using rule 21 (estatuto -> regreso .)
    RETURN          reduce using rule 21 (estatuto -> regreso .)
    WHILE           reduce using rule 21 (estatuto -> regreso .)
    RCURLY          reduce using rule 21 (estatuto -> regreso .)


state 56

    (18) estatuto -> asignacion .

    ID              reduce using rule 18 (estatuto -> asignacion .)
    IF              reduce using rule 18 (estatuto -> asignacion .)
    PRINT           reduce using rule 18 (estatuto -> asignacion .)
    RETURN          reduce using rule 18 (estatuto -> asignacion .)
    WHILE           reduce using rule 18 (estatuto -> asignacion .)
    RCURLY          reduce using rule 18 (estatuto -> asignacion .)


state 57

    (20) estatuto -> escritura .
